# -*- Makefile.am -*-
#
# Copyright (c) 2016      Los Alamos National Security, LLC. All rights
#                         reserved.
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

LDADD = ../src/libhio.la
AM_CPPFLAGS = -I$(top_srcdir)/src/include

bin_PROGRAMS = hio_ds_info

hio_ds_info_SOURCES = hio_ds_info.c
